--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,16 @@
 Gemfile.lock
 pkg/*
 .idea
+*.rbc
+.config
+.yardoc
+InstalledFiles
+_yardoc
+coverage
+doc/
+lib/bundler/man
+rdoc
+spec/reports
+test/tmp
+test/version_tmp
+tmp
